@@ -27,6 +27,7 @@
 #include "config.h"
 #include "addserver.h"
 #include "srv-prop.h"
+#include "pref.h"
 
 static struct history *server_history = NULL;
 
@@ -58,6 +59,11 @@ static GtkWidget *create_server_type_menu (void) {
   menu = gtk_menu_new ();
 
   for (i = 0; i < GAMES_TOTAL; i++) {
+
+    // Skip a game if it's not configured and show only configured is enabled
+    if (!games[i].cmd && default_show_only_configured_games)
+      continue;
+  
     menu_item = gtk_menu_item_new ();
     gtk_menu_append (GTK_MENU (menu), menu_item);
 
