@@ -1,8 +1,12 @@
+Oct 10, 2002: Alex Burger <alex@fragit_dot_net>
+- Added support of 'Show only configured games' to Add Master window
+  Add Server window and Statistics page
+
 Oct 10, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
 - update NEWS and TODO
 - added script 'vc' to automate editing this file
 
-Oct 05, 2002: Alex Burger <alex@fragit_dot_net>
+Oct 09, 2002: Alex Burger <alex@fragit_dot_net>
 - Added password support to Unreal based games (games that use
   un_exec - Unreal, UT 2003, Rune)
 - Changed UT 2003 icon to have a #2 at the bottom right hand corner.
